{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 125,
  "lineage": "2ac8c6b1-daad-98fd-01ac-c447646546a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "private_gateways",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-9a479f57",
            "domain": "vpc",
            "id": "eipalloc-014fdf13a08a73b00",
            "network_interface": "eni-09a361684e7e48b45",
            "private_dns": "ip-10-1-6-242.eu-west-2.compute.internal",
            "private_ip": "10.1.6.242",
            "public_dns": "ec2-3-9-199-84.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.199.84",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-48a76392",
            "domain": "vpc",
            "id": "eipalloc-0af16db9d75c5f70f",
            "network_interface": "eni-028ec18004c08a318",
            "private_dns": "ip-10-1-7-227.eu-west-2.compute.internal",
            "private_ip": "10.1.7.227",
            "public_dns": "ec2-18-132-235-249.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.235.249",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-6b439197",
            "domain": "vpc",
            "id": "eipalloc-01d4d9849ac87abf9",
            "network_interface": "eni-0d34f870188bdaaa6",
            "private_dns": "ip-10-1-8-84.eu-west-2.compute.internal",
            "private_ip": "10.1.8.84",
            "public_dns": "ec2-18-132-238-70.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.238.70",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b2c7572fccd61d1a",
            "owner_id": "681735686245",
            "tags": {
              "Name": "v3"
            },
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "privates",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014fdf13a08a73b00",
            "id": "nat-0eb702c82a498ec61",
            "network_interface_id": "eni-09a361684e7e48b45",
            "private_ip": "10.1.6.242",
            "public_ip": "3.9.199.84",
            "subnet_id": "subnet-0ddde823da38b1eb5"
          },
          "dependencies": [
            "aws_eip.private_gateways",
            "aws_subnet.privates",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af16db9d75c5f70f",
            "id": "nat-020fed3ba6b5d3bd9",
            "network_interface_id": "eni-028ec18004c08a318",
            "private_ip": "10.1.7.227",
            "public_ip": "18.132.235.249",
            "subnet_id": "subnet-082d83bb058da1683"
          },
          "dependencies": [
            "aws_eip.private_gateways",
            "aws_subnet.privates",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d4d9849ac87abf9",
            "id": "nat-00754cdb748332caa",
            "network_interface_id": "eni-0d34f870188bdaaa6",
            "private_ip": "10.1.8.84",
            "public_ip": "18.132.238.70",
            "subnet_id": "subnet-01bfee2a9ecca3fe9"
          },
          "dependencies": [
            "aws_eip.private_gateways",
            "aws_subnet.privates",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privates",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03f253e5758ed89cc",
            "owner_id": "681735686245",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0eb702c82a498ec61",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_nat_gateway.privates",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-094497684b5d90b89",
            "owner_id": "681735686245",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-020fed3ba6b5d3bd9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_nat_gateway.privates",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-061e0d3c9aaadfaee",
            "owner_id": "681735686245",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00754cdb748332caa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_nat_gateway.privates",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cfd3a0f7bf866e50",
            "owner_id": "681735686245",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2c7572fccd61d1a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "v3 webservers"
            },
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045093d0987e16df4",
            "route_table_id": "rtb-03f253e5758ed89cc",
            "subnet_id": "subnet-0ddde823da38b1eb5"
          },
          "dependencies": [
            "aws_nat_gateway.privates",
            "aws_route_table.privates",
            "aws_subnet.privates",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1422d89617da68e",
            "route_table_id": "rtb-094497684b5d90b89",
            "subnet_id": "subnet-082d83bb058da1683"
          },
          "dependencies": [
            "aws_nat_gateway.privates",
            "aws_route_table.privates",
            "aws_subnet.privates",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f24c03643099d9c",
            "route_table_id": "rtb-061e0d3c9aaadfaee",
            "subnet_id": "subnet-01bfee2a9ecca3fe9"
          },
          "dependencies": [
            "aws_nat_gateway.privates",
            "aws_route_table.privates",
            "aws_subnet.privates",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webservers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0117d8f19639bb99f",
            "route_table_id": "rtb-0cfd3a0f7bf866e50",
            "subnet_id": "subnet-0c794d6086f7115fc"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.webserver",
            "aws_subnet.webservers",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0679130fd9b4fe044",
            "route_table_id": "rtb-0cfd3a0f7bf866e50",
            "subnet_id": "subnet-029cfd6b712be00e8"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.webserver",
            "aws_subnet.webservers",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d1472a6c55e5124",
            "route_table_id": "rtb-0cfd3a0f7bf866e50",
            "subnet_id": "subnet-00d453887b9074d06"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.webserver",
            "aws_subnet.webservers",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:681735686245:security-group/sg-0c4ce191ea08be694",
            "description": "Security Group for V3 RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4ce191ea08be694",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "v3 RDS",
            "name_prefix": null,
            "owner_id": "681735686245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "v3_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main_rds_egress_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3552399398",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c4ce191ea08be694",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main_rds_ingress_mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1079190706",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c4ce191ea08be694",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:681735686245:subnet/subnet-0ddde823da38b1eb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-0ddde823da38b1eb5",
            "map_public_ip_on_launch": false,
            "owner_id": "681735686245",
            "tags": {
              "Name": "v3_private 0"
            },
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:681735686245:subnet/subnet-082d83bb058da1683",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.7.0/24",
            "id": "subnet-082d83bb058da1683",
            "map_public_ip_on_launch": false,
            "owner_id": "681735686245",
            "tags": {
              "Name": "v3_private 1"
            },
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:681735686245:subnet/subnet-01bfee2a9ecca3fe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.1.8.0/24",
            "id": "subnet-01bfee2a9ecca3fe9",
            "map_public_ip_on_launch": false,
            "owner_id": "681735686245",
            "tags": {
              "Name": "v3_private 2"
            },
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webservers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:681735686245:subnet/subnet-0c794d6086f7115fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0c794d6086f7115fc",
            "map_public_ip_on_launch": false,
            "owner_id": "681735686245",
            "tags": {
              "Name": "private 0"
            },
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:681735686245:subnet/subnet-029cfd6b712be00e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-029cfd6b712be00e8",
            "map_public_ip_on_launch": false,
            "owner_id": "681735686245",
            "tags": {
              "Name": "private 1"
            },
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:681735686245:subnet/subnet-00d453887b9074d06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-00d453887b9074d06",
            "map_public_ip_on_launch": false,
            "owner_id": "681735686245",
            "tags": {
              "Name": "private 2"
            },
            "vpc_id": "vpc-01c30988a05163b7d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:681735686245:vpc/vpc-01c30988a05163b7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ca1b9d241266d063",
            "default_route_table_id": "rtb-0b06704915c9df140",
            "default_security_group_id": "sg-0e0403a0c40d7add4",
            "dhcp_options_id": "dopt-15a5377c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01c30988a05163b7d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b06704915c9df140",
            "owner_id": "681735686245",
            "tags": {
              "Name": "v3"
            }
          }
        }
      ]
    }
  ]
}